# alex-sandbox

./: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Lexer.hs  Lexer.x  Lexer1.hs  Lexer1.x  Lexer2.hs  Lexer2.x  Main.hs  alex-sandbox.cabal  build.sh  dockerfile  input2.txt  readme.md  run.sh  start-development-environment.sh
Lexers/Lexer1/: Lexer1.hs  readme.md
Lexers/Lexer2/: Lexer2.hs  Lexer2.x  input.txt  readme.md
Lexers/Lexer3/: Lexer3.hs  Lexer3.x  input.txt  readme.md
Lexers/Lexer4/: Lexer4.x  input.txt  readme.md
